--- a/requirements.txt
+++ b/requirements.txt
@@ -1,18 +1,14 @@
+streamlit>=1.28.0
 llama-index>=0.11.0
 llama-index-embeddings-huggingface>=0.2.0
 llama-index-vector-stores-chroma>=0.1.0
 sentence-transformers>=2.2.2
-streamlit>=1.28.0
 torch>=2.0.0
 transformers>=4.35.0
 chromadb>=0.4.15
-pathlib2
-pandas
-numpy
+pandas>=1.5.0
+numpy>=1.24.0
 moviepy==1.0.3
-deepgram-sdk==4.5.0
-python-dotenv==1.0.0
-pathlib
-asyncio
-typing
-logging 
+deepgram-sdk>=3.0.0
+python-dotenv>=1.0.0
+pathlib2>=2.3.7 
